build: add pom dependencies
- add spring starter validation